# teste_django

./: .env.example  .gitignore  README.md  pyproject.toml
apps/projects/: models.py  urls.py  views.py
apps/projects/migrations/: 0001_initial.py  0002_remove_project_created_at_remove_project_updated_at_and_more.py  0003_alter_project_description_alter_project_image_and_more.py
apps/projects/templates/: base.html  project_delete.html  project_detail.html  project_form.html  project_list.html
apps/users/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_auto_20230602_0042.py  0003_user_address_user_city_user_state.py  0004_alter_user_address_alter_user_city_and_more.py
apps/users/templates/: register.html  user_delete.html  user_form.html  user_list.html
apps/users/templates/registration/: base.html  login.html
config/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_user.py
